--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<!DOCTYPE html><html><head><title>Mi sitio web</title></head><body><h1>¡Hola, mundo!</h1></body></html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Sitio Web</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <header>
+        <h1>¡Bienvenidos a Mi Sitio Web!</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="about.html">Sobre mí</a></li>
+                <li><a href="contact.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Introducción</h2>
+            <p>Este es un ejemplo de un sitio web simple usando GitHub Pages.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Mi Sitio Web</p>
+    </footer>
+    <script src="js/scripts.js"></script>
+</body>
+</html>
