--- a/index.html
+++ b/index.html
@@ -3,28 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Sitio Web</title>
+    <title>Mi Portafolio</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <h1>¡Bienvenidos a Mi Sitio Web!</h1>
+        <h1>Mi Portafolio</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="about.html">Sobre mí</a></li>
-                <li><a href="contact.html">Contacto</a></li>
+                <li><a href="#about">Sobre mí</a></li>
+                <li><a href="#projects">Proyectos</a></li>
+                <li><a href="#contact">Contacto</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Introducción</h2>
-            <p>Este es un ejemplo de un sitio web simple usando GitHub Pages.</p>
+        <section id="about">
+            <h2>Sobre mí</h2>
+            <p>Hola, soy [Tu Nombre], un desarrollador web apasionado por crear soluciones innovadoras y eficientes.</p>
+        </section>
+        <section id="projects">
+            <h2>Proyectos</h2>
+            <article class="project">
+                <h3>Proyecto 1</h3>
+                <p>Descripción del proyecto 1.</p>
+            </article>
+            <article class="project">
+                <h3>Proyecto 2</h3>
+                <p>Descripción del proyecto 2.</p>
+            </article>
+        </section>
+        <section id="contact">
+            <h2>Contacto</h2>
+            <p>Puedes contactarme a través de <a href="mailto:tuemail@example.com">tuemail@example.com</a>.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Mi Sitio Web</p>
+        <p>&copy; 2024 Mi Portafolio</p>
     </footer>
     <script src="js/scripts.js"></script>
 </body>
